feat: CandidAI Chrome Extension - Complete Implementation with security fixes

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -52,7 +52,7 @@
                 <line x1="16" y1="17" x2="8" y2="17" />
                 <polyline points="10 9 9 9 8 9" />
               </svg>
-              <span class="ca-nav__label">Resume & Context</span>
+              <span class="ca-nav__label">Documents & Context</span>
             </button>
           </li>
           <li class="ca-nav__item">
@@ -214,21 +214,21 @@
 
         <!-- Resume & Context Section -->
         <section id="section-resume" class="ca-section">
-          <h2 class="ca-section__title">Resume & Job Context</h2>
+          <h2 class="ca-section__title">Documents & Meeting Context</h2>
           <p class="ca-section__description">
-            Upload your resume and provide job descriptions to enable personalized interview
+            Upload your Documents and provide job descriptions to enable personalized interview
             suggestions.
           </p>
 
           <div class="ca-upload-area">
-            <h3 class="ca-subsection__title">Resume Upload</h3>
+            <h3 class="ca-subsection__title">Documents Upload</h3>
             <div id="resume-dropzone" class="ca-dropzone">
               <svg class="ca-dropzone__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
                 <polyline points="17 8 12 3 7 8" />
                 <line x1="12" y1="3" x2="12" y2="15" />
               </svg>
-              <p class="ca-dropzone__text">Drop your resume here or click to browse</p>
+              <p class="ca-dropzone__text">Drop your Documents here or click to browse</p>
               <p class="ca-dropzone__subtext">Supports PDF and DOCX formats</p>
               <input type="file" id="resume-input" accept=".pdf,.docx" hidden />
             </div>
